--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ permalink:        pretty
 title:            "Kaninik Baradi"
 tagline:          "Project execution • Systems engineering • Climate Risk • Public policy"
 description:      "Engineering delivery and research at the intersection of complex projects, sustainability, and AI for policy."
-url:              "mechakaradi.github.io"
-baseurl:          /
+url:              "https://mechakaradi.github.io"
+baseurl:          ""
 
 author:
   name:           'Kaninik Baradi'
