--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl:          ""
 
 author:
   name:           'Kaninik Baradi'
-  url:            "kaninikbaradi@gmail.com"
+  email:           "kaninikbaradi@gmail.com"
 
 paginate:         5
 paginate_path:    "/page:num/"
